--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -6,12 +6,12 @@
                 <img src="../../../../assets/images/stocks_logo.jpeg" class="img-fluid w-100 container empty-space" alt="First Photo">
                 
                 <!-- Button container for alignment -->
-                <div class="position-absolute bottom-0 start-0 d-flex flex-column align-items-start clickable-photo-container">
-                    <a href="#" class="clickable-photo mb-2 ">
-                        <img src="../../../../assets/images/AppStore.png" class="img-fluid w-100" alt="App Store">
+                <div class="clickable-photo-container">
+                    <a href="#" class="clickable-photo mb-2">
+                        <img src="../../../../assets/images/AppStore.png" class="clickable-photo-img" alt="App Store">
                     </a>
-                    <a href="#" class="clickable-photo">
-                        <img src="../../../../assets/images/GooglePlay.png" class="img-fluid w-100" alt="Google Play">
+                    <a href="#" class="clickable-photo mb-2">
+                        <img src="../../../../assets/images/GooglePlay.png" class="clickable-photo-img" alt="Google Play">
                     </a>
                 </div>
             </div>
