--- a/src/app/components/home/stock-market/stock-market.component.html
+++ b/src/app/components/home/stock-market/stock-market.component.html
@@ -1,3 +1,4 @@
+<section id="market-statistics">
 <div class="jobs">
     <div class="container"data-aos="fade-up" data-aos-duration="1000">
         <div class="container">
@@ -74,3 +75,4 @@
 
   </div>
 </div>
+</section>
