--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -18,12 +18,12 @@
     </div>
 
     <div class="footer-credits text-center" >
-        <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_andresjose", "footer", "click")' href="https://github.com/andresjosehr/andresjosehr-portfolio" target="_blank" rel="nofollow noopener noreferrer">
-            <div>Built with Angular by Jose Andres</div>
+        <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_andresjose", "footer", "click")' href="https://github.com/27medwa2el" target="_blank" rel="nofollow noopener noreferrer">
+            <div>Built by Pioneers Securities software team</div>
         </a>
-        <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_brittany", "footer", "click")' href="https://github.com/bchiang7/v4" target="_blank" rel="nofollow noopener noreferrer">
+        <!-- <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_brittany", "footer", "click")' href="https://github.com/27medwa2el" target="_blank" rel="nofollow noopener noreferrer">
             <div class="mt-2">Designed by Brittany Chiang</div>
-        </a>
+        </a> -->
     </div>
 
 </footer>
