--- a/src/app/components/home/banner/banner.component.css
+++ b/src/app/components/home/banner/banner.component.css
@@ -1,42 +1,57 @@
 .home-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  
-  .trade-text {
-    font-size: 2.5rem;  /* Adjust the font size as needed */
-    color: black;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  .empty-space {
-    margin-top: 80px; /* Adjust the value as needed */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-  .trade-text:hover {
-    color: brown;  /* Change color on hover */
-  }
-  
-  .banner .row {
-    position: relative;
-  }
-  
-  .banner img {
-    display: block; /* Ensure images are displayed as blocks */
-  }
-  
-  .clickable-photo-container {
-    position: absolute; /* Position the container absolutely */
-    bottom: 13%; /* Adjust as needed */
-    left: 13%; /* Adjust as needed */
-    z-index: 5; /* Ensure it appears above the first photo */
-  }
-  
+.trade-text {
+  font-size: 2.5rem; /* Adjust the font size as needed */
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.empty-space {
+  margin-top: 80px; /* Adjust the value as needed */
+}
+
+.trade-text:hover {
+  color: brown; /* Change color on hover */
+}
+
+.banner .row {
+  position: relative;
+}
+
+.banner img {
+  display: block; /* Ensure images are displayed as blocks */
+}
+
+.clickable-photo-container {
+  position: absolute; /* Position the container absolutely */
+  bottom: 20px; /* Adjust as needed */
+  left: 22%; /* Adjust as needed */
+  z-index: 5; /* Ensure it appears above the first photo */
+  display: flex;
+  flex-direction: column;
+}
+
+.clickable-photo img {
+  background-color: black;
+  width: 150px; /* Set a fixed width */
+  height: auto;
+  min-width: 100px; /* Prevents the image from becoming too small */
+}
+
+@media (max-width: 768px) {
   .clickable-photo img {
-    background-color: black;
-    max-width: 100%;
-    height: auto;
+    width: 100px; /* Adjust the width for smaller screens */
   }
-  
+}
+
+@media (max-width: 576px) {
+  .clickable-photo img {
+    width: 80px; /* Further adjust the width for very small screens */
+  }
+}
