--- a/src/app/components/home/contact/contact.component.html
+++ b/src/app/components/home/contact/contact.component.html
@@ -2,9 +2,9 @@
   <div class="container contact">
     <div class="section-box">
       <div class="mb-4" data-aos="fade-up" data-aos-duration="1000">
-        <h3 class="contact-pre-title big-subtitle">
+        <!-- <h3 class="contact-pre-title big-subtitle">
           05. {{ "Contact.Pretitle" | translate }}
-        </h3>
+        </h3> -->
         <h4 class="e-font contact-title big-title">
           {{ "Contact.Title" | translate }}
         </h4>
@@ -21,7 +21,7 @@
               'email'
             )
           "
-          href="mailto:andresjosehr@gmail.com"
+          href="mailto:helpdesk@pioneers-securities.com"
           target="_blank"
           class="main-btn"
           data-aos="fade-up"
