--- a/src/app/components/home/more-proyects/more-proyects.component.html
+++ b/src/app/components/home/more-proyects/more-proyects.component.html
@@ -1,4 +1,4 @@
-<section class="section more-proyects">
+<section class="section more-proyects" id="trading-rules">
     <div class="container">
         <div class="section-box">
             <div class="container">
