--- a/src/app/components/general/header/header.component.html
+++ b/src/app/components/general/header/header.component.html
@@ -70,35 +70,35 @@
                 <nav>
                     <ol>
                         <li (click)='analyticsService.sendAnalyticEvent("click_about", "menu", "click")'>
-                            <a (click)='scroll("about")'>
-                                <span>01. </span> {{"Header.Item1" | translate}}
+                            <a (click)='scroll("banner")'>
+                                <span></span> {{"Header.Item1" | translate}}
                             </a>
                         </li>
                         <li (click)='analyticsService.sendAnalyticEvent("click_experience", "menu", "click")'>
-                            <a (click)='scroll("jobs")'>
-                                <span>02. </span> {{"Header.Item2" | translate}}
+                            <a (click)='scroll("market-statistics")'>
+                                <span></span> {{"Header.Item2" | translate}}
                             </a>
                         </li>
                         <li (click)='analyticsService.sendAnalyticEvent("click_jobs", "menu", "click")'>
-                          <a (click)='scroll("proyects")'>
-                              <span>03. </span> {{"Header.Item3" | translate}}
+                          <a (click)='scroll("contact-us")'>
+                              <span></span> {{"Header.Item3" | translate}}
                           </a>
                       </li>
                       <li (click)='analyticsService.sendAnalyticEvent("click_contact", "menu", "click")'>
-                        <a (click)='scroll("proyects")'>
-                            <span>04. </span> {{"Header.Item4" | translate}}
+                        <a (click)='scroll("trading-rules")'>
+                            <span></span> {{"Header.Item4" | translate}}
                         </a>
                       </li>
-                      <li>
+                      <!-- <li>
                           <a (click)="downloadCV()" class="main-btn cv-btn">
                             {{"Header.cvBtn" | translate}}
                           </a>
-                      </li>
+                      </li> -->
                       <li>
                             <div class="language-container">
-                                <div (click)='changeLanguage("es")' style='border-bottom-left-radius: 0px !important;border-bottom-right-radius: 0px !important;' class="language-container language-container-selector active" [class.active]='languageFormControl.value == "es"'>
-                                    <img src="https://www.worldometers.info/img/flags/sp-flag.gif" alt="Español">
-                                    <span class="flag-text">Español</span>
+                                <div (click)='changeLanguage("ar")' style='border-bottom-left-radius: 0px !important;border-bottom-right-radius: 0px !important;' class="language-container language-container-selector active" [class.active]='languageFormControl.value == "ar"'>
+                                    <img src="https://www.worldometers.info/img/flags/eg-flag.gif" alt="Español">
+                                    <span class="flag-text">Arabic</span>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check2 arrow-active" viewBox="0 0 16 16">
                                         <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
                                       </svg>
