--- a/src/app/components/home/market-summary/market-summary.component.html
+++ b/src/app/components/home/market-summary/market-summary.component.html
@@ -13,6 +13,7 @@
       </div>
       
       <div class="summary-details mx-2 my-2">
+        <div class="table-responsive">
           <table class="table table-bordered">
               <thead>
                   <tr>
@@ -37,12 +38,14 @@
                   </tr>
               </tbody>
           </table>
+        </div>
       </div>
     <div class="market-tabs mx-2" >
       <button class="btn btn-light active">Arab Markets</button>
       <button class="btn btn-light">International Markets</button>
     </div>
     <div class="market-table mx-2">
+      <div class="table-responsive">
       <table class="table table-bordered">
         <thead>
           <tr>
@@ -65,6 +68,7 @@
           </tr>
         </tbody>
       </table>
+    </div>
       </div>
       </div>
     </div>
