--- a/src/app/components/home/more-proyects/more-proyects.component.html
+++ b/src/app/components/home/more-proyects/more-proyects.component.html
@@ -6,6 +6,7 @@
                    {{"OtherProjects.Title" | translate}}
                 </h3>
             </div>
+            <div class="table-responsive">
             <table class="table bg-light">
                 <thead>
                   <tr>
@@ -40,6 +41,7 @@
                   </tr>
                 </tbody>
               </table>
+            </div>
             <!-- <div class="mt-5">
                 <div class="row p-0">
 
