--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,6 +9,7 @@
     
     <app-stock-market></app-stock-market>
     <app-market-summary></app-market-summary>
+    <app-news></app-news>
     <app-contact-us></app-contact-us>
     <app-contact></app-contact>
     
