--- a/src/app/components/home/jobs/jobs.component.scss
+++ b/src/app/components/home/jobs/jobs.component.scss
@@ -6,6 +6,10 @@
         background-color: #fff;
     }
 }
+.empty-space {
+    height: 50px;   
+    background-color: $Navy;
+  }
 
 .about-details {
     h2 {
